# SimulAiz

./: .env.sample  .gitignore  AGENTS.md  DEPLOYMENT.md  Dockerfile  Dockerfile.gpu  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml  test-runner.yml
deploy/: stack.yml
deploy/traefik/: dynamic.yml
models/: README.md
scripts/: create-release.sh  setup-ci.sh
src/simulaiz/: __init__.py  __main__.py  agent.py  avatar_liveportrait.py  avatar_reactive.py  avatar_wav2lip.py  stt_whisper.py  tts_xtts.py  web.py
src/simulaiz/agents/: __init__.py
src/simulaiz/core/: __init__.py
src/simulaiz/ui/: index.html
tests/: test_placeholder.py
